@@ -31,7 +31,7 @@
 			$.fn.yiiListView.settings[id] = settings;
 
 			if(settings.ajaxUpdate.length > 0) {
-				$(settings.updateSelector).live('click',function(){
+				$(settings.updateSelector).die('click').live('click',function(){
 					$.fn.yiiListView.update(id, {url: $(this).attr('href')});
 					return false;
 				});
